modules/gdscript/tests/scripts/runtime/errors/use_return_value_of_free_call.gd
func test():
	var obj
	obj = Node.new()
	print(obj.free())
